--- a/index.html
+++ b/index.html
@@ -665,9 +665,9 @@
                 <h2 class="form-title"><i class="fas fa-plus-circle"></i> Tambah ID Channel Baru</h2>
                 
                 <div class="form-group">
-                    <label for="fullId"><i class="fas fa-hashtag"></i> ID Lengkap (contoh: 120363307077684911@newsletter)</label>
+                    <label for="fullId"><i class="fas fa-hashtag"></i> ID Lengkap (contoh: 120363xxxxxxxxxx@newsletter)</label>
                     <div class="input-group">
-                        <input type="text" id="fullId" placeholder="120363307077684911@newsletter" autocomplete="off">
+                        <input type="text" id="fullId" placeholder="120363xxxxxxxxxxx@newsletter" autocomplete="off">
                         <button class="btn btn-primary" id="addIdBtn">
                             <i class="fas fa-cloud-upload-alt"></i> Tambah
                         </button>
